# rgcli

./: .gitignore  .goreleaser.yaml  Cargo.toml  Makefile  README.md  RELEASING.md  install.sh  langgraph.json  main.go
.github/workflows/: ci.yml  release-lsandbox.yml  release.yml
crates/langsmith-sandbox/: Cargo.toml  pyproject.toml
crates/langsmith-sandbox-py/: Cargo.toml  pyproject.toml
crates/langsmith-sandbox-py/src/: lib.rs
crates/langsmith-sandbox/src/: client.rs  error.rs  handle.rs  lib.rs  models.rs  runtime.rs  ws.rs
demo/langgraph/: README.md  agent.py  auth.py  langgraph-ssap-mvp.json  pyproject.toml  sandbox_sessions_app.py
docs/: sandbox-protocol-client-driven.md  sandbox-protocol-hybrid.md  sandbox-protocol-recommendation.md  sandbox-protocol-server-driven.md  sandbox-protocol-spec.md  sandbox-shared-environment-problem.md
homebrew/: ailsd.rb.template  lsc.rb.template
internal/api/: client.go
internal/config/: config.go
internal/ui/: picker.go
rgcli_go/: CLAUDE.md  README.md  RELEASING.md  go.mod
rgcli_go/internal/api/: sse.go  types.go
rgcli_go/internal/ui/: messages.go  model.go  styles.go
rgcli_rust/src/api/: client.rs  mod.rs  types.rs
rgcli_rust/src/ui/: chat.rs  mod.rs
schemas/: config.json  settings.json
src/: config.rs  context.rs  debug_log.rs  langsmith.rs  main.rs  update.rs
src/api/: client.rs  host.rs  mod.rs  sse.rs  types.rs
src/bench/: report.rs  runner.rs
src/commands/: assistants.rs  bench.rs  crons.rs  deployment.rs  logs.rs  mod.rs  runs.rs  sandbox.rs  store.rs  threads.rs  uninstall.rs
src/deploy/: capabilities.rs  compose.rs  config.rs  constants.rs  docker.rs  docker_tag.rs  exec.rs  local_deps.rs  mod.rs  path_rewrite.rs
src/ui/: app.rs  chat.rs  mascot.rs  mod.rs  picker.rs  screen.rs  styles.rs
src/ui/chat/: helpers.rs  input.rs  markdown.rs  mod.rs  render.rs  sandbox_pane.rs  streaming.rs
src/ui/screens/: assistants.rs  crons.rs  deployments.rs  logs.rs  mod.rs  runs.rs  store.rs  threads.rs
src/ui/widgets/: command_bar.rs  mod.rs  resource_table.rs
tests/: config_test.rs
