[package]
name = "lsc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
bytes = "1.11.0"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = "0.28.1"
directories = "5.0.1"
futures-util = "0.3.30"
inquire = "0.7.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.5", features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_yaml = "0.9.34"
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tui-textarea = "0.7.0"
