[package]
name = "ailsd"
version = "0.2.3"
edition = "2024"

[dependencies]
anyhow = "1.0.82"
bytes = "1.11.0"
clap = { version = "4.5.30", features = ["derive"] }
crossterm = { version = "0.28.1", features = ["event-stream"] }
flate2 = "1.0"
directories = "5.0.1"
futures-util = "0.3.30"
inquire = "0.7.5"
ratatui = "0.29.0"
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls"] }
serde = { version = "1.0.197", features = ["derive"] }
tar = "0.4"
serde_json = "1.0.114"
serde_yaml = "0.9.34"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0.61"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tui-textarea = "0.7.0"
urlencoding = "2.1"
# tui-markdown removed due to ratatui version mismatch
base64 = "0.22.1"
comfy-table = "=7.1.3"
syntect = "5"
indexmap = { version = "2", features = ["serde"] }
which = "7"
regex = "1"

[dev-dependencies]
tempfile = "3.0"
