[package]
name = "lsandbox"
version = "0.0.1"
edition = "2024"
description = "Rust SDK for LangSmith Sandboxes"
license = "MIT"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["json", "stream", "rustls-tls", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1", features = ["macros", "rt", "time", "sync", "net"] }
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
urlencoding = "2.1"
